<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/all_songs"
            android:title="@string/all_songs"
            android:icon="@drawable/ic_songs"
            />
        <item
            android:id="@+id/favourites"
            android:title="@string/favourites"
            android:icon="@drawable/ic_favorites"
            />
        <item
            android:id="@+id/about"
            android:title="@string/about_us"
            android:icon="@drawable/ic_about_us"
            />
        <item
            android:id="@+id/settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_settings"
            />
    </group>
</menu>