<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rLay"
    android:background="#00032a"
    tools:context=".activity.SongPlayActivity">


    <TextView
        android:id="@+id/txtSongName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_above="@+id/seekBar"
        android:text="@string/songname"
        android:textColor="#212121"
        android:textSize="25sp" />
    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="25dp" />
    <RelativeLayout
        android:id="@+id/rLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rLay1"
        >

        <TextView
            android:id="@+id/txtStTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00_00"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp" />
        <TextView
            android:id="@+id/txtEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endtime"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rLay1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:layout_centerInParent="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/LLayout"
            >

            <ImageView
                android:id="@+id/imgShuffle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_shuffle"
                android:layout_marginStart="25dp" />
            <ImageView
                android:id="@+id/imgPlayPrev"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_play_prev"
                android:layout_marginStart="25dp" />
            <ImageView
                android:id="@+id/imgPlay"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_play"
                android:layout_marginStart="25dp" />
            <ImageView
                android:id="@+id/imgPlayNext"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_play_next"
                android:layout_marginStart="25dp"
                />

            <ImageView
                android:id="@+id/imgLoopWhite"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_loop"
                android:layout_marginStart="25dp" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>